--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: ok-nick/setup-aftman@v0.3.0
         name: Install aftman
         with:
-          token: ${{ SECRETS.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Aftman Toolchains
         run: aftman install
