--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,8 @@ name: Releases
 on: push
 
 jobs: 
+  permissions:
+    contents: write
 
   deploy:
     if: ${{ github.ref == 'refs/heads/main' }}
@@ -75,7 +77,7 @@ jobs:
       - uses: ok-nick/setup-aftman@v0.3.0
         name: Install aftman
         with:
-          token: ${{ SECRETS.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Aftman Toolchains
         run: aftman install
